[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=1]

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.88983
margin_top = -0.629944
margin_right = 1.88977
margin_bottom = -0.629944
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game Name" type="Label" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 1001.0
margin_bottom = 197.0
text = "zwatch"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="."]
margin_left = 350.0
margin_top = 210.0
margin_right = 650.0
margin_bottom = 310.0
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="."]
margin_left = 350.891
margin_top = 340.0
margin_right = 650.891
margin_bottom = 440.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitGameButoon" type="Button" parent="."]
margin_left = 350.0
margin_top = 470.0
margin_right = 650.0
margin_bottom = 570.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsPanel" type="Panel" parent="."]
pause_mode = 2
margin_left = 252.696
margin_top = 87.6646
margin_right = 809.696
margin_bottom = 479.665
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="SettingsPanel"]
margin_left = 2.82841
margin_top = -1.41422
margin_right = 187.828
margin_bottom = 38.5858
rect_scale = Vector2( 3, 3 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoneButton" type="Button" parent="SettingsPanel"]
margin_left = 175.0
margin_top = 320.0
margin_right = 375.0
margin_bottom = 370.0
text = "Done"
[connection signal="pressed" from="NewGameButton" to="." method="_on_NewGame_Button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="QuitGameButoon" to="." method="_on_QuitGame_Butoon_pressed"]
[connection signal="pressed" from="SettingsPanel/DoneButton" to="." method="_on_DoneButton_pressed"]
